--- a/settings/internal/com.kms.katalon.core.webui.remote.properties
+++ b/settings/internal/com.kms.katalon.core.webui.remote.properties
@@ -1,1 +1,1 @@
-{"REMOTE_WEB_DRIVER":{"platformName":"ios","platformVersion":"15","deviceName":"iPhone 13 Pro","local":"false","remoteWebDriverUrl":"http://nguyenthanh_2hB1yI:9K5pHLrgqfykH5mW9kzs@hub-cloud.browserstack.com/wd/hub","remoteWebDriverType":"Appium","remoteMobileDriver":"IOS_DRIVER"}}
+{"REMOTE_WEB_DRIVER":{"autoAcceptAlerts":true,"autoGrantsPermission":true,"remoteWebDriverUrl":"","remoteWebDriverType":"Selenium","remoteMobileDriver":"IOS_DRIVER"}}
