--- a/settings/internal/com.kms.katalon.execution.properties
+++ b/settings/internal/com.kms.katalon.execution.properties
@@ -26,3 +26,17 @@ mailConfig.sendTestSuiteReport=true
 mailConfig.sendReportTestFailedOnly=false
 mailConfig.sendTestSuiteCollectionReport=false
 mailConfig.skipIndividualTestSuiteReport=false
+show-Profiles=true
+show-Test\ Cases=true
+show-Object\ Repository=true
+show-Test\ Suites=true
+show-Data\ Files=true
+show-Checkpoints=true
+show-Keywords=true
+show-Test\ Listeners=true
+show-Reports=true
+show-Include=true
+show-androidapp=true
+show-Data=true
+show-Plugins=true
+show-Tutorials=true
